<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:http="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        http:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/settings_toolbar"
            app:titleCentered="true"
            android:backgroundTint="@color/color_accent"
            android:background="@color/white"
            http:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radius_used_in_the_map"
        android:textColor="@color/black"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="12dp"
        android:labelFor="@id/slider_radius"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintBottom_toTopOf="@id/slider_radius"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="2000.0"
        android:value="10000.0"
        android:valueFrom="0"
        android:valueTo="20000.0"
        app:layout_constraintBottom_toTopOf="@id/tv_zoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_radius"
        app:thumbColor="@color/color_accent"
        app:tickColor="@color/black"
        app:tickVisible="true"
        app:trackColor="@color/grey"
        app:trackColorActive="@color/color_accent" />

    <TextView
        android:id="@+id/tv_zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zoom_used_in_the_map"
        android:textColor="@color/black"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="32dp"
        android:labelFor="@id/slider_zoom"
        app:layout_constraintTop_toBottomOf="@id/slider_radius"
        app:layout_constraintBottom_toTopOf="@id/slider_zoom"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_zoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="1.0"
        android:value="12.0"
        android:valueFrom="8.0"
        android:valueTo="16.0"
        app:tickColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/switch_notifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider_radius"
        app:layout_constraintVertical_bias="0.401"
        app:thumbColor="@color/color_accent"
        app:trackColor="@color/grey"
        app:trackColorActive="@color/color_accent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_notifications"
        style="@style/switch_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:checked="true"
        android:text="@string/allow_notifications"
        app:thumbTint="@color/custom_thumb_selector"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintBottom_toTopOf="@id/tv_delete_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_delete_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_my_account"
        android:textColor="@color/black"
        android:layout_marginLeft="32dp"
        android:labelFor="@id/bt_delete_account"
        app:layout_constraintTop_toBottomOf="@id/switch_notifications"
        app:layout_constraintBottom_toTopOf="@id/bt_save_settings"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/bt_delete_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintTop_toTopOf="@id/tv_delete_account"
        android:layout_marginRight="32dp"
        android:backgroundTint="@color/color_accent"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/tv_delete_account"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/bt_save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:backgroundTint="@color/color_accent"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_delete_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>