<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/place_details_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:http="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        http:ignore="MissingConstraints">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/im_detail_place"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/drawer_header_background"
                android:contentDescription="@string/place_image" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_detail_middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_accent"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar">

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/app_name"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_detail_address"/>

        <TextView
            android:id="@+id/tv_detail_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/app_name"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <RatingBar
            android:id="@+id/rb_detail_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="3"
            android:rating="0"
            android:stepSize="0.5"
            android:layout_marginStart="15dp"
            style="?android:attr/ratingBarStyleSmall"
            app:layout_constraintStart_toEndOf="@id/tv_detail_name"
            app:layout_constraintBottom_toBottomOf="@id/tv_detail_name"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/bt_detail_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_baseline_call_24"
        android:layout_marginTop="8dp"
        android:drawableTint="@color/color_accent"
        android:text="@string/call"
        android:outlineProvider="none"
        android:textColor="@color/color_accent"
        android:background="@color/transparent"
        app:layout_constraintTop_toBottomOf="@id/cl_detail_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bt_detail_like"/>

    <Button
        android:id="@+id/bt_detail_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_baseline_star_outline_24"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:drawableTint="@color/color_accent"
        android:outlineProvider="none"
        android:text="@string/like"
        android:textColor="@color/color_accent"
        app:layout_constraintTop_toBottomOf="@id/cl_detail_middle"
        app:layout_constraintStart_toEndOf="@id/bt_detail_call"
        app:layout_constraintEnd_toStartOf="@id/bt_detail_website"/>

    <Button
        android:id="@+id/bt_detail_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableTop="@drawable/ic_baseline_language_24"
        android:drawableTint="@color/color_accent"
        android:text="@string/website"
        android:textColor="@color/color_accent"
        android:background="@color/transparent"
        android:outlineProvider="none"
        app:layout_constraintTop_toBottomOf="@id/cl_detail_middle"
        app:layout_constraintStart_toEndOf="@id/bt_detail_like"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_detail_workmates"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="12dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_detail_like"
        tools:context=".ui.activities.PlaceDetailsActivity"
        tools:listitem="@layout/item_detail_workmates_view" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_detail_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:maxImageSize="32dp"
        app:srcCompat="@drawable/check_circle_grey"
        app:backgroundTint="@color/white"
        app:tint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintBottom_toTopOf="@id/cl_detail_middle"
        android:contentDescription="@string/button_to_save_place_choice" />


</androidx.constraintlayout.widget.ConstraintLayout>