<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_list_view"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:layout_marginVertical="16dp">

    <TextView
        android:id="@+id/tv_place_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/im_place"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/tv_place_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="14sp"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toStartOf="@id/im_place"
        app:layout_constraintTop_toTopOf="@id/im_place"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/tv_place_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="13sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_place_name"
        app:layout_constraintBottom_toTopOf="@id/tv_place_open"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/tv_hyphen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textSize="13sp"
        android:textColor="@color/black"
        android:text="@string/hyphen"
        app:layout_constraintStart_toEndOf="@id/tv_place_style"
        app:layout_constraintTop_toBottomOf="@id/tv_place_name"
        app:layout_constraintBottom_toTopOf="@id/tv_place_open"
        tools:text="@string/hyphen" />

    <TextView
        android:id="@+id/tv_place_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_marginLeft="8dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/tv_hyphen"
        app:layout_constraintTop_toBottomOf="@id/tv_place_name"
        app:layout_constraintBottom_toTopOf="@id/tv_place_open"
        tools:text="@string/app_name" />

    <ImageView
        android:id="@+id/im_workmate"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_baseline_person_outline_24"
        app:layout_constraintTop_toBottomOf="@id/tv_place_name"
        app:layout_constraintBottom_toTopOf="@id/tv_place_open"
        app:layout_constraintEnd_toStartOf="@id/tv_workmate_number"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tv_workmate_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_marginLeft="4dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/im_place"
        app:layout_constraintTop_toBottomOf="@id/tv_place_name"
        app:layout_constraintBottom_toTopOf="@id/tv_place_open"
        tools:text="@string/workmate_number" />

    <TextView
        android:id="@+id/tv_place_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="13sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/im_place"
        tools:text="@string/app_name" />

    <ImageView
        android:id="@+id/im_star"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/ic_baseline_star_outline_24"
        app:layout_constraintBottom_toBottomOf="@id/im_place"
        app:layout_constraintEnd_toStartOf="@id/im_place"
        app:tint="@color/dark_grey" />

    <ImageView
        android:id="@+id/im_place"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:src="@drawable/ic_baseline_dinner_dining_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>